# clear

./: .gitignore  README.md
CLEAR_Cpp/: CMakeLists.txt  README.md  Readme.txt  install_clear.sh
CLEAR_Cpp/cmake_modules/: FindMatlab.cmake
CLEAR_Cpp/include/clear/: DynmeansCluster.hpp  FlirtSubmap.hpp  GlareFeature.hpp  MultiwayMatcher.hpp  MyGraph.hpp  PairwiseMatch.hpp  PairwiseMatcher.hpp  Submap.hpp  clear_utils.hpp
CLEAR_Cpp/include/clear/utils/: blockSVD.hpp
CLEAR_Cpp/src/: DynmeansCluster.cpp  FlirtSubmap.cpp  Hungarian.cpp  MultiwayMatcher.cpp  MyGraph.cpp  PairwiseMatch.cpp  PairwiseMatcher.cpp  Submap.cpp
CLEAR_Cpp/src/tests/: clearUnitTests.cpp  testBlockSVD.cpp  testHungarian.cpp  testMyGraph.cpp
CLEAR_Matlab/: CLEAR.m  Example.m
CLEAR_Matlab/Helpers/: BlockSVD.m  EstimateNumObj.m  ExData.mat  GraphConnectedComp.m  Hungarian.m  L2P.m  NormalizeLap.m  OptimalAssign.m  P2L.m  PivotRows.m  SuboptimalAssign.m
CLEAR_Python/: CLEAR.py  Example.py  in.txt  out.txt  util.py
Realworld_Comparisons/: Benchmark_CMUHotel.m  Benchmark_Graffiti.m  README.md
Realworld_Comparisons/Helpers/: InconsistentAlgsResults.m  Match_Features.m  NumComponents.m  PairDist.m  Process_CMUHotel.m  Process_Graffiti.m  SuboptimalNN.m
Synthetic_Comparisons/: Compare_NumAgt.m  Compare_NumObs.m  README.txt
Synthetic_Comparisons/Algorithms/: MatchEIG.m  MatchLift.m  QuickMatch.m  SpectralKF.m  mmatch_CVX_ALS.m  mmatch_MatchLift.m  mmatch_spectral.m  nmfSync.m
Synthetic_Comparisons/Helpers/: AddMismatch.m  AddNoise.m  CheckConsistency.m  CheckPerm.m  CompareAlgs.m  (+9 more)
(+401 files in other folders)
